testdata/baselines/reference/submodule/compiler/typeReferenceDirectiveWithFailedFromTypeRoot.errors.txt
/a.ts(1,1): error TS2304: Cannot find name 'a'.


==== /a.ts (1 errors) ====
    a;
    ~
!!! error TS2304: Cannot find name 'a'.
==== /typings/dummy.d.ts (0 errors) ====
    declare const a2: number;
    
==== /node_modules/phaser/types/phaser.d.ts (0 errors) ====
    declare const a: number;
    
==== /node_modules/phaser/package.json (0 errors) ====
    { "name": "phaser", "version": "1.2.3", "types": "types/phaser.d.ts" }
    